--- a/index.html
+++ b/index.html
@@ -108,60 +108,54 @@
     <main>
         <section id="what">
             <h2>What is Board Game Bonanza?</h2>
-            <p>Board Game Bonanza is a celebration of all things tabletop gaming. From strategy games to party games, we explore the vast and exciting world of board games.</p>
+            <p>Welcome to Board Game Bonanza, your ultimate source for all things tabletop gaming! We delve into the diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Board%20game%20table%20top%20view?width=512&height=512&nologo=true" alt="Board Game Table Top View">
-                <figcaption>A tabletop view of various board games.</figcaption>
+                <figcaption>A diverse collection of board games laid out on a table.</figcaption>
                 <p style="font-style: italic;">Prompt: Board game table top view</p>
             </figure>
-            <p>Whether you're a seasoned gamer or new to the hobby, there's always something new to discover.</p>
-            <p>We aim to bring people together through the joy of playing board games.</p>
+            <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new favorites and share their passion.</p>
+            <p>Join us as we explore the endless possibilities of board game entertainment!</p>
         </section>
         <section id="who">
-            <h2>Who We Are</h2>
-            <p>We are a group of board game enthusiasts who love to explore and share our passion with others.</p>
+            <h2>About Our Community</h2>
+            <p>Our community is built on the shared love for board games. We are a diverse group of individuals who come together to play, learn, and have fun.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20playing%20board%20games?width=512&height=512&nologo=true" alt="Group Playing Board Games">
-                <figcaption>A group of friends enjoying a board game night.</figcaption>
+                <figcaption>A group of friends laughing and playing a board game.</figcaption>
                 <p style="font-style: italic;">Prompt: Group of people playing board games</p>
             </figure>
-            <p>Our mission is to create a welcoming community for board game lovers of all levels.</p>
-            <p>We host regular game nights and events to bring people together.</p>
+            <p>We organize regular game nights, workshops, and tournaments to foster a sense of camaraderie and friendly competition.</p>
+            <p>Everyone is welcome to join our community, regardless of their experience level.</p>
         </section>
         <section id="when">
-            <h2>When to Play</h2>
-            <p>Board games can be enjoyed at any time, but we especially love playing on weekends and during holidays.</p>
+            <h2>Game Night Schedule</h2>
+            <p>Our weekly game nights are held every Friday evening from 7 PM to 10 PM. We also host special events and tournaments on weekends.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Clock%20with%20board%20game%20pieces?width=512&height=512&nologo=true" alt="Clock with Board Game Pieces">
-                <figcaption>A clock with board game pieces indicating game time.</figcaption>
+                <figcaption>A clock surrounded by board game pieces, showing the time.</figcaption>
                 <p style="font-style: italic;">Prompt: Clock with board game pieces</p>
             </figure>
-            <p>Our organized game nights are typically held on Friday evenings.</p>
-            <p>Check our schedule for upcoming events and game sessions.</p>
+            <p>Check our online calendar for upcoming events and to RSVP for game nights.</p>
+            <p>We recommend arriving early to secure a spot and meet fellow gamers.</p>
         </section>
         <section id="where">
-            <h2>Where to Play</h2>
-            <p>We play at various locations, including community centers, cafes, and private homes.</p>
+            <h2>Location and Venues</h2>
+            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers">
-                <figcaption>A map showing various locations for board game meetups.</figcaption>
+                <figcaption>A map showing the location of the Community Center and other venues.</figcaption>
                 <p style="font-style: italic;">Prompt: Map with board game markers</p>
             </figure>
-            <p>Our main venue is the local community center, which provides ample space and resources.</p>
-            <p>We also organize outdoor game sessions during the summer months.</p>
+            <p>Occasionally, we organize outdoor game sessions at local parks during the summer months.</p>
+            <p>We also collaborate with local cafes and game stores for special events and promotions.</p>
         </section>
         <section id="how">
-            <h2>How to Play</h2>
-            <p>Learning to play board games is easy and fun. We provide tutorials and demonstrations for new players.</p>
+            <h2>Getting Started</h2>
+            <p>If you're new to board games, don't worry! We offer introductory sessions and tutorials for beginners. Our experienced members are always happy to help you learn the rules and strategies.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Hands%20setting%20up%20a%20board%20game?width=512&height=512&nologo=true" alt="Hands Setting Up a Board Game">
-                <figcaption>Hands setting up a board game for play.</figcaption>
+                <figcaption>Hands setting up a complex board game.</figcaption>
                 <p style="font-style: italic;">Prompt: Hands setting up a board game</p>
             </figure>
-            <p>We encourage players to ask questions and learn from each other.</p>
-            <p>Many online resources and videos are available to help you learn new games.</p>
-        </section>
-        <section id="why">
-            <h2>Why Play Board Games?</h2>
-            <p>Board games offer a great way to socialize, have fun, and exercise your brain.</p>
-            <figure
+            <p>We recommend starting
