--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Board Game Hobby</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎲</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%220.9em%22 font-size=%2290%22>🎲</text></svg>">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -96,13 +96,12 @@
     <header>
         <h1>Board Game Bonanza</h1>
         <nav>
-            <a href="#what" onclick="showSection('what')">Home</a>
-            <a href="#who" onclick="showSection('who')">About</a>
-            <a href="#when" onclick="showSection('when')">When</a>
-            <a href="#where" onclick="showSection('where')">Where</a>
-            <a href="#how" onclick="showSection('how')">How</a>
+            <a href="#what" onclick="showSection('what')">Home</a> 🎲
+            <a href="#who" onclick="showSection('who')">About</a> 🎲
+            <a href="#when" onclick="showSection('when')">When</a> 🎲
+            <a href="#where" onclick="showSection('where')">Where</a> 🎲
+            <a href="#how" onclick="showSection('how')">How</a> 🎲
             <a href="#why" onclick="showSection('why')">Why</a>
-            <a href="#ai-prompts" onclick="showSection('ai-prompts')">AI Prompts</a>
         </nav>
     </header>
     <main>
@@ -112,7 +111,6 @@
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Board%20game%20table%20top%20view?width=512&height=512&nologo=true" alt="Board Game Table Top View">
                 <figcaption>A diverse collection of board games laid out on a table.</figcaption>
-                <p style="font-style: italic;">Prompt: Board game table top view</p>
             </figure>
             <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new favorites and share their passion.</p>
             <p>Join us as we explore the endless possibilities of board game entertainment!</p>
@@ -123,7 +121,6 @@
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20playing%20board%20games?width=512&height=512&nologo=true" alt="Group Playing Board Games">
                 <figcaption>A group of friends laughing and playing a board game.</figcaption>
-                <p style="font-style: italic;">Prompt: Group of people playing board games</p>
             </figure>
             <p>We organize regular game nights, workshops, and tournaments to foster a sense of camaraderie and friendly competition.</p>
             <p>Everyone is welcome to join our community, regardless of their experience level.</p>
@@ -134,7 +131,6 @@
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Clock%20with%20board%20game%20pieces?width=512&height=512&nologo=true" alt="Clock with Board Game Pieces">
                 <figcaption>A clock surrounded by board game pieces, showing the time.</figcaption>
-                <p style="font-style: italic;">Prompt: Clock with board game pieces</p>
             </figure>
             <p>Check our online calendar for upcoming events and to RSVP for game nights.</p>
             <p>We recommend arriving early to secure a spot and meet fellow gamers.</p>
@@ -145,7 +141,6 @@
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers">
                 <figcaption>A map showing the location of the Community Center and other venues.</figcaption>
-                <p style="font-style: italic;">Prompt: Map with board game markers</p>
             </figure>
             <p>Occasionally, we organize outdoor game sessions at local parks during the summer months.</p>
             <p>We also collaborate with local cafes and game stores for special events and promotions.</p>
@@ -156,6 +151,12 @@
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Hands%20setting%20up%20a%20board%20game?width=512&height=512&nologo=true" alt="Hands Setting Up a Board Game">
                 <figcaption>Hands setting up a complex board game.</figcaption>
-                <p style="font-style: italic;">Prompt: Hands setting up a board game</p>
             </figure>
-            <p>We recommend starting
+            <p>We recommend starting with simple games and gradually moving to more complex ones as you gain experience.</p>
+            <p>Join us for a game night, and we'll help you get started on your board game journey!</p>
+        </section>
+        <section id="why">
+            <h2>Why Board Games?</h2>
+            <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They provide an opportunity to disconnect from screens and engage in face-to-face fun.</p>
+            <figure>
+                <img src="https://image.pollinations.ai/
