--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         section:not(#what) {
-            display: none;
+            display: none';
         }
         figure {
             text-align: center;
