--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         section:not(#what) {
-            display: none';
+            display: none;
         }
         figure {
             text-align: center;
@@ -157,6 +157,4 @@
         </section>
         <section id="why">
             <h2>Why Board Games?</h2>
-            <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They provide an opportunity to disconnect from screens and engage in face-to-face fun.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/
+            <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They
