--- a/index.html
+++ b/index.html
@@ -157,4 +157,6 @@
         </section>
         <section id="why">
             <h2>Why Board Games?</h2>
-            <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They
+            <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They provide an opportunity to disconnect from screens and engage in face-to-face fun.</p>
+            <figure>
+                <img src="https://image.pollinations.ai/
