--- a/index.html
+++ b/index.html
@@ -105,58 +105,19 @@
         </nav>
     </header>
     <main>
-        <section id="what">
-            <h2>What is Board Game Bonanza?</h2>
-            <p>Welcome to Board Game Bonanza, your ultimate source for all things tabletop gaming! We delve into the diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Board%20game%20table%20top%20view?width=512&height=512&nologo=true" alt="Board Game Table Top View">
-                <figcaption>A diverse collection of board games laid out on a table.</figcaption>
-            </figure>
-            <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new favorites and share their passion.</p>
-            <p>Join us as we explore the endless possibilities of board game entertainment!</p>
-        </section>
-        <section id="who">
-            <h2>About Our Community</h2>
-            <p>Our community is built on the shared love for board games. We are a diverse group of individuals who come together to play, learn, and have fun.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20playing%20board%20games?width=512&height=512&nologo=true" alt="Group Playing Board Games">
-                <figcaption>A group of friends laughing and playing a board game.</figcaption>
-            </figure>
-            <p>We organize regular game nights, workshops, and tournaments to foster a sense of camaraderie and friendly competition.</p>
-            <p>Everyone is welcome to join our community, regardless of their experience level.</p>
-        </section>
-        <section id="when">
-            <h2>Game Night Schedule</h2>
-            <p>Our weekly game nights are held every Friday evening from 7 PM to 10 PM. We also host special events and tournaments on weekends.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Clock%20with%20board%20game%20pieces?width=512&height=512&nologo=true" alt="Clock with Board Game Pieces">
-                <figcaption>A clock surrounded by board game pieces, showing the time.</figcaption>
-            </figure>
-            <p>Check our online calendar for upcoming events and to RSVP for game nights.</p>
-            <p>We recommend arriving early to secure a spot and meet fellow gamers.</p>
-        </section>
-        <section id="where">
-            <h2>Location and Venues</h2>
-            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers">
-                <figcaption>A map showing the location of the Community Center and other venues.</figcaption>
-            </figure>
-            <p>Occasionally, we organize outdoor game sessions at local parks during the summer months.</p>
-            <p>We also collaborate with local cafes and game stores for special events and promotions.</p>
-        </section>
-        <section id="how">
-            <h2>Getting Started</h2>
-            <p>If you're new to board games, don't worry! We offer introductory sessions and tutorials for beginners. Our experienced members are always happy to help you learn the rules and strategies.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/prompt/Hands%20setting%20up%20a%20board%20game?width=512&height=512&nologo=true" alt="Hands Setting Up a Board Game">
-                <figcaption>Hands setting up a complex board game.</figcaption>
-            </figure>
-            <p>We recommend starting with simple games and gradually moving to more complex ones as you gain experience.</p>
-            <p>Join us for a game night, and we'll help you get started on your board game journey!</p>
-        </section>
-        <section id="why">
-            <h2>Why Board Games?</h2>
-            <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They provide an opportunity to disconnect from screens and engage in face-to-face fun.</p>
-            <figure>
-                <img src="https://image.pollinations.ai/
+        <section id="what"> <h2>What is Board Game Bonanza?</h2> <p>Welcome to Board Game Bonanza, your ultimate source for all things tabletop gaming! We delve into the diverse world of board games, from intricate strategy titles to lighthearted party games.</p> </section>
+        <section id="who"> <h2>About Our Community</h2> <p>Our community is built on the shared love for board games. We are a diverse group of individuals who come together to play, learn, and have fun.</p> </section>
+        <section id="when"> <h2>Game Night Schedule</h2> <p>Our weekly game nights are held every Friday evening from 7 PM to 10 PM. We also host special events and tournaments on weekends.</p> </section>
+        <section id="where"> <h2>Location and Venues</h2> <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay.</p> </section>
+        <section id="how"> <h2>Getting Started</h2> <p>If you're new to board games, don't worry! We offer introductory sessions and tutorials for beginners. Our experienced members are always happy to help you learn the rules and strategies.</p> </section>
+        <section id="why"> <h2>Why Board Games?</h2> <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They provide an opportunity to disconnect from screens and engage in face-to-face fun.</p> </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Board Game Bonanza. All rights reserved.</p>
+        <div class="validation-buttons">
+            <a href="https://validator.w3.org/" target="_blank">HTML Validator</a>
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validator</a>
+        </div>
+    </footer>
+</body>
+</html>
