--- a/index.html
+++ b/index.html
@@ -65,81 +65,7 @@
             bottom: 0;
             width: 100%;
         }
-        .validation-buttons {
-            display: flex;
-            justify-content: center;
-            margin-top: 10px;
-        }
-        .validation-buttons a {
-            margin: 0 10px;
-            text-decoration: none;
-            background-color: #6a4c93;
-            padding: 5px 10px;
-            border-radius: 5px;
-            color: white;
-        }
-        .validation-buttons a:hover {
-            background-color: #583d72;
-        }
     </style>
     <script>
         function showSection(sectionId) {
-            const sections = document.querySelectorAll('section');
-            sections.forEach(section => {
-                section.style.display = 'none';
-            });
-            document.getElementById(sectionId).style.display = 'block';
-        }
-    </script>
-</head>
-<body>
-    <header>
-        <h1>Board Game Bonanza</h1>
-        <nav>
-            <a href="#what" onclick="showSection('what')">Home</a> 🎲
-            <a href="#who" onclick="showSection('who')">About</a> 🎲
-            <a href="#when" onclick="showSection('when')">When</a> 🎲
-            <a href="#where" onclick="showSection('where')">Where</a> 🎲
-            <a href="#how" onclick="showSection('how')">How</a> 🎲
-            <a href="#why" onclick="showSection('why')">Why</a>
-        </nav>
-    </header>
-    <main>
-        <section id="what">
-            <h2>What is Board Game Bonanza?</h2>
-            <p>Welcome to Board Game Bonanza, your ultimate source for all things tabletop gaming! We delve into the diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
-        </section>
-        <section id="who">
-            <h2>About Our Community</h2>
-            <p>Our community is built on the shared love for board games. We are a diverse group of individuals who come together to play, learn, and have fun.</p>
-        </section>
-        <section id="when">
-            <h2>Game Night Schedule</h2>
-            <p>Our weekly game nights are held every Friday evening from 7 PM to 10 PM. We also host special events and tournaments on weekends.</p>
-        </section>
-        <section id="where">
-            <h2>Location and Venues</h2>
-            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay.</p>
-        </section>
-        <section id="how">
-            <h2>Getting Started</h2>
-            <p>If you're new to board games, don't worry! We offer introductory sessions and tutorials for beginners. Our experienced members are always happy to help you learn the rules and strategies.</p>
-        </section>
-        <section id="why">
-            <h2>Why Board Games?</h2>
-            <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They provide an opportunity to disconnect from screens and engage in face-to-face fun.</p>
-        </section>
-    </main>
-    <footer>
-        <div>Explore More:</div>
-        <nav>
-            <a href="#what" onclick="showSection('what')">Home</a> |
-            <a href="#who" onclick="showSection('who')">About</a> |
-            <a href="#when" onclick="showSection('when')">When</a> |
-            <a href="#where" onclick="showSection('where')">Where</a> |
-            <a href="#how" onclick="showSection('how')">How</a> |
-            <a href="#why" onclick="showSection('why')">Why</a>
-        </nav>
-    </footer>
-</body>
-</html>
+            con
