--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Board Game Hobby</title>
+    <title>Board Game Bonanza</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%220.9em%22 font-size=%2290%22>🎲</text></svg>">
     <style>
         body {
@@ -80,11 +80,11 @@
     <header>
         <h1>Board Game Bonanza</h1>
         <nav>
-            <a href="#what" onclick="showSection('what')">Home</a>
-            <a href="#who" onclick="showSection('who')">About</a>
-            <a href="#when" onclick="showSection('when')">When</a>
-            <a href="#where" onclick="showSection('where')">Where</a>
-            <a href="#how" onclick="showSection('how')">How</a>
+            <a href="#what" onclick="showSection('what')">Home</a> 🎲
+            <a href="#who" onclick="showSection('who')">About</a> 🎲
+            <a href="#when" onclick="showSection('when')">When</a> 🎲
+            <a href="#where" onclick="showSection('where')">Where</a> 🎲
+            <a href="#how" onclick="showSection('how')">How</a> 🎲
             <a href="#why" onclick="showSection('why')">Why</a>
         </nav>
     </header>
@@ -92,31 +92,72 @@
         <section id="what">
             <h2>What is Board Game Bonanza?</h2>
             <p>Welcome to Board Game Bonanza, your ultimate source for all things tabletop gaming! We delve into the diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
+            <figure>
+                <img src="images/boardgame_what.jpg" alt="A colorful board game layout.">
+                <figcaption>A visually appealing board game setup.</figcaption>
+                <p><i>Prompt: "A top-down view of a colorful board game with various tokens and cards, bright lighting, digital art style."</i></p>
+            </figure>
+            <p>Board games provide a fantastic way to engage with friends and family.</p>
+            <p>They offer a blend of strategy, creativity, and social interaction.</p>
+            <p>We explore a wide range of genres and themes.</p>
         </section>
         <section id="who">
             <h2>About Our Community</h2>
             <p>Our community is built on the shared love for board games. We are a diverse group of individuals who come together to play, learn, and have fun.</p>
+            <figure>
+                <img src="images/boardgame_who.jpg" alt="A group of people playing board games.">
+                <figcaption>Community members enjoying a game night.</figcaption>
+                <p><i>Prompt: "A diverse group of people laughing and playing a board game around a table, warm lighting, friendly atmosphere, cartoon style."</i></p>
+            </figure>
+            <p>We welcome players of all skill levels, from beginners to experienced gamers.</p>
+            <p>Our members are passionate about sharing their knowledge and enthusiasm for board games.</p>
+            <p>Join us to make new friends and discover new games.</p>
         </section>
         <section id="when">
             <h2>Game Night Schedule</h2>
             <p>Our weekly game nights are held every Friday evening from 7 PM to 10 PM. We also host special events and tournaments on weekends.</p>
+            <figure>
+                <img src="images/boardgame_when.jpg" alt="A clock showing game night time.">
+                <figcaption>A clock indicating game night hours.</figcaption>
+                <p><i>Prompt: "A stylized clock with game tokens marking the hours, warm colors, digital painting style."</i></p>
+            </figure>
+            <p>Friday evenings are perfect for unwinding and enjoying some friendly competition.</p>
+            <p>Check our calendar for upcoming special events and tournaments.</p>
+            <p>We aim to provide a consistent and enjoyable gaming experience.</p>
         </section>
         <section id="where">
             <h2>Location and Venues</h2>
             <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay.</p>
+            <figure>
+                <img src="images/boardgame_where.jpg" alt="The Community Center building.">
+                <figcaption>The Community Center where we meet.</figcaption>
+                <p><i>Prompt: "A welcoming community center with board game tables visible through the windows, daytime, architectural illustration style."</i></p>
+            </figure>
+            <p>The Community Center offers a comfortable and accessible space for our game nights.</p>
+            <p>We occasionally explore other venues for special events.</p>
+            <p>Our location is easily accessible by public transportation.</p>
         </section>
         <section id="how">
             <h2>Getting Started</h2>
             <p>If you're new to board games, don't worry! We offer introductory sessions and tutorials for beginners. Our experienced members are always happy to help you learn the rules and strategies.</p>
+            <figure>
+                <img src="images/boardgame_how.jpg" alt="A tutorial session for new players.">
+                <figcaption>New players learning the rules of a game.</figcaption>
+                <p><i>Prompt: "A friendly instructor explaining board game rules to a group of beginners, step-by-step diagrams, educational illustration style."</i></p>
+            </figure>
+            <p>We provide all the necessary materials and guidance to get you started.</p>
+            <p>Our tutorials are designed to be fun and engaging.</p>
+            <p>Join us to discover the joy of learning new games.</p>
         </section>
         <section id="why">
             <h2>Why Board Games?</h2>
             <p>Board games offer a unique blend of entertainment, social interaction, and mental stimulation. They provide an opportunity to disconnect from screens and engage in face-to-face fun.</p>
+            <figure>
+                <img src="images/boardgame_why.jpg" alt="People enjoying a board game together.">
+                <figcaption>People enjoying a board game.</figcaption>
+                <p><i>Prompt: "People laughing and having fun playing a board game, warm indoor lighting, joyful expressions, realistic digital art style."</i></p>
+            </figure>
+            <p>They foster critical thinking and problem-solving skills.</p>
+            <p>Board games are a great way to build lasting memories with friends and family.</p>
+            <p>They provide a break from digital distractions.</p>
         </section>
-    </main>
-    <footer>
-        <p>© 2025 Board Game Bonanza. All rights reserved.</p>
-        <p><a href="https://validator.w3.org/">HTML Validator</a> | <a href="https://jigsaw.w3.org/css-validator/">CSS Validator</a></p>
-    </footer>
-</body>
-</html>
