--- a/index.html
+++ b/index.html
@@ -155,9 +155,4 @@
             <figure>
                 <img src="images/boardgame_why.jpg" alt="People enjoying a board game together.">
                 <figcaption>People enjoying a board game.</figcaption>
-                <p><i>Prompt: "People laughing and having fun playing a board game, warm indoor lighting, joyful expressions, realistic digital art style."</i></p>
-            </figure>
-            <p>They foster critical thinking and problem-solving skills.</p>
-            <p>Board games are a great way to build lasting memories with friends and family.</p>
-            <p>They provide a break from digital distractions.</p>
-        </section>
+                <p><i>Prompt: "People laughing and having fun playing a board game, warm indoor lighting, joyful expressions, realistic digital art
