--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         .validation-buttons a:hover {
             background-color: #583d72;
         }
+        .validation-buttons img {
+            width: 40px;
+            height: auto;
+        }
     </style>
     <script>
         function showSection(sectionId) {
@@ -158,4 +162,15 @@
                 <p style="font-style: italic;">Prompt: Hands setting up a board game</p>
             </figure>
             <p>We recommend starting with simple games and gradually moving to more complex ones as you gain experience.</p>
-            <p>Join us for
+        </section>
+    </main>
+    <footer>
+        <p>Designed by <a href="https://yourdesignfirmwebsite.com" target="_blank" style="color: white; text-decoration: underline;">Your Design Firm</a></p>
+        <div class="validation-buttons">
+            <a href="https://validator.w3.org/" target="_blank"><img src="https://www.w3.org/Icons/valid-html401-blue" alt="HTML Validation"></a>
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank"><img src="https://www.w3.org/Icons/valid-css-blue" alt="CSS Validation"></a>
+            <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank"><img src="https://www.w3.org/WAI/WCAG21/AA-logo" alt="Accessibility Validation"></a>
+        </div>
+    </footer>
+</body>
+</html>
