--- a/index.html
+++ b/index.html
@@ -81,10 +81,6 @@
         .validation-buttons a:hover {
             background-color: #583d72;
         }
-        .validation-buttons img {
-            width: 40px;
-            height: auto;
-        }
     </style>
     <script>
         function showSection(sectionId) {
@@ -163,14 +159,10 @@
             </figure>
             <p>We recommend starting with simple games and gradually moving to more complex ones as you gain experience.</p>
         </section>
-    </main>
-    <footer>
-        <p>Designed by <a href="https://yourdesignfirmwebsite.com" target="_blank" style="color: white; text-decoration: underline;">Your Design Firm</a></p>
-        <div class="validation-buttons">
-            <a href="https://validator.w3.org/" target="_blank"><img src="https://www.w3.org/Icons/valid-html401-blue" alt="HTML Validation"></a>
-            <a href="https://jigsaw.w3.org/css-validator/" target="_blank"><img src="https://www.w3.org/Icons/valid-css-blue" alt="CSS Validation"></a>
-            <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank"><img src="https://www.w3.org/WAI/WCAG21/AA-logo" alt="Accessibility Validation"></a>
-        </div>
-    </footer>
-</body>
-</html>
+        <!-- AI Prompts Section -->
+        <section id="ai-prompts">
+            <h2>AI Prompts Used for This Page</h2>
+            <p>The images in this website were generated using an AI model. Below are the prompts used for each image:</p>
+            <ul>
+                <li>AI Model: Pollinations.ai</li>
+                <li>
