--- a/index.html
+++ b/index.html
@@ -158,11 +158,40 @@
                 <p style="font-style: italic;">Prompt: Hands setting up a board game</p>
             </figure>
             <p>We recommend starting with simple games and gradually moving to more complex ones as you gain experience.</p>
+            <p>Join us for game nights, and let's dive into the world of fun!</p>
         </section>
-        <!-- AI Prompts Section -->
+        <section id="why">
+            <h2>Why Board Game Bonanza?</h2>
+            <p>At Board Game Bonanza, we aim to provide an inclusive space for people to relax and socialize through gaming. Whether you’re a strategy mastermind or someone looking for a fun way to unwind, our events offer a welcoming atmosphere for everyone.</p>
+            <figure>
+                <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20laughing%20and%20playing%20board%20games?width=512&height=512&nologo=true" alt="People Laughing and Playing Board Games">
+                <figcaption>A group of people laughing and playing board games.</figcaption>
+                <p style="font-style: italic;">Prompt: Group of people laughing and playing board games</p>
+            </figure>
+            <p>We believe board games can bring people together, foster creativity, and strengthen community bonds.</p>
+        </section>
         <section id="ai-prompts">
             <h2>AI Prompts Used for This Page</h2>
             <p>The images in this website were generated using an AI model. Below are the prompts used for each image:</p>
             <ul>
                 <li>AI Model: Pollinations.ai</li>
-                <li>
+                <li><strong>Prompt for the "Board Game Table Top View" Image:</strong> Board game table top view</li>
+                <li><strong>Prompt for the "Group Playing Board Games" Image:</strong> Group of people playing board games</li>
+                <li><strong>Prompt for the "Clock with Board Game Pieces" Image:</strong> Clock with board game pieces</li>
+                <li><strong>Prompt for the "Map with Board Game Markers" Image:</strong> Map with board game markers</li>
+                <li><strong>Prompt for the "Hands Setting Up a Board Game" Image:</strong> Hands setting up a board game</li>
+                <li><strong>Prompt for the "People Laughing and Playing Board Games" Image (from the Why section):</strong> Group of people laughing and playing board games</li>
+            </ul>
+            <p><strong>Note:</strong> I only used AI for images so I don't need the AI Prompts section</p>
+        </section>
+    </main>
+    <footer>
+        <p>Designed by <a href="https://www.yourdesignfirm.com" target="_blank">Your Design Firm</a></p>
+        <div class="validation-buttons">
+            <a href="https://validator.w3.org/" target="_blank">HTML Validation</a>
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validation</a>
+            <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank">Accessibility Validation</a>
+        </div>
+    </footer>
+</body>
+</html>
