--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <a href="#where" onclick="showSection('where')">Where</a>
             <a href="#how" onclick="showSection('how')">How</a>
             <a href="#why" onclick="showSection('why')">Why</a>
+            <a href="#ai-prompts" onclick="showSection('ai-prompts')">AI Prompts</a> <!-- Added new tab for AI Prompts -->
         </nav>
     </header>
     <main>
@@ -186,12 +187,4 @@
         </section>
     </main>
     <footer>
-        <p>Designed by <a href="https://www.yourdesignfirm.com" target="_blank">Your Design Firm</a></p>
-        <div class="validation-buttons">
-            <a href="https://validator.w3.org/" target="_blank">HTML Validation</a>
-            <a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validation</a>
-            <a href="https://www.w3.org/WAI/WCAG2AA-Conformance" target="_blank">Accessibility Validation</a>
-        </div>
-    </footer>
-</body>
-</html>
+        <p>Designed by <a href="https://www
