--- a/index.html
+++ b/index.html
@@ -179,12 +179,4 @@
                 <li><strong>Prompt for the "Board Game Table Top View" Image:</strong> Board game table top view</li>
                 <li><strong>Prompt for the "Group Playing Board Games" Image:</strong> Group of people playing board games</li>
                 <li><strong>Prompt for the "Clock with Board Game Pieces" Image:</strong> Clock with board game pieces</li>
-                <li><strong>Prompt for the "Map with Board Game Markers" Image:</strong> Map with board game markers</li>
-                <li><strong>Prompt for the "Hands Setting Up a Board Game" Image:</strong> Hands setting up a board game</li>
-                <li><strong>Prompt for the "People Laughing and Playing Board Games" Image (from the Why section):</strong> Group of people laughing and playing board games</li>
-            </ul>
-            <p><strong>Note:</strong> I only used AI for images so I don't need the AI Prompts section</p>
-        </section>
-    </main>
-    <footer>
-        <p>Designed by <a href="https://www
+                <li><strong>Prompt for the "Map with Board Game Mark
