--- a/index.html
+++ b/index.html
@@ -179,4 +179,14 @@
                 <li><strong>Prompt for the "Board Game Table Top View" Image:</strong> Board game table top view</li>
                 <li><strong>Prompt for the "Group Playing Board Games" Image:</strong> Group of people playing board games</li>
                 <li><strong>Prompt for the "Clock with Board Game Pieces" Image:</strong> Clock with board game pieces</li>
-                <li><strong>Prompt for the "Map with Board Game Mark
+                <li><strong>Prompt for the "Map with Board Game Markers" Image:</strong> Map with board game markers</li>
+                <li><strong>Prompt for the "Hands Setting Up a Board Game" Image:</strong> Hands setting up a board game</li>
+                <li><strong>Prompt for the "People Laughing and Playing Board Games" Image:</strong> Group of people laughing and playing board games</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Board Game Bonanza. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
