--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
             <a href="#where" onclick="showSection('where')">Where</a>
             <a href="#how" onclick="showSection('how')">How</a>
             <a href="#why" onclick="showSection('why')">Why</a>
-            <a href="#ai-prompts" onclick="showSection('ai-prompts')">AI Prompts</a> <!-- Added new tab for AI Prompts -->
         </nav>
     </header>
     <main>
@@ -159,7 +158,6 @@
                 <p style="font-style: italic;">Prompt: Hands setting up a board game</p>
             </figure>
             <p>We recommend starting with simple games and gradually moving to more complex ones as you gain experience.</p>
-            <p>Join us for game nights, and let's dive into the world of fun!</p>
         </section>
         <section id="why">
             <h2>Why Board Game Bonanza?</h2>
@@ -171,22 +169,13 @@
             </figure>
             <p>We believe board games can bring people together, foster creativity, and strengthen community bonds.</p>
         </section>
-        <section id="ai-prompts">
-            <h2>AI Prompts Used for This Page</h2>
-            <p>The images in this website were generated using an AI model. Below are the prompts used for each image:</p>
-            <ul>
-                <li>AI Model: Pollinations.ai</li>
-                <li><strong>Prompt for the "Board Game Table Top View" Image:</strong> Board game table top view</li>
-                <li><strong>Prompt for the "Group Playing Board Games" Image:</strong> Group of people playing board games</li>
-                <li><strong>Prompt for the "Clock with Board Game Pieces" Image:</strong> Clock with board game pieces</li>
-                <li><strong>Prompt for the "Map with Board Game Markers" Image:</strong> Map with board game markers</li>
-                <li><strong>Prompt for the "Hands Setting Up a Board Game" Image:</strong> Hands setting up a board game</li>
-                <li><strong>Prompt for the "People Laughing and Playing Board Games" Image:</strong> Group of people laughing and playing board games</li>
-            </ul>
-        </section>
     </main>
     <footer>
-        <p>&copy; 2025 Board Game Bonanza. All Rights Reserved.</p>
+        <p>© 2025 Board Game Bonanza</p>
+        <div class="validation-buttons">
+            <a href="#">Validate</a>
+            <a href="#">Save</a>
+        </div>
     </footer>
 </body>
 </html>
