--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
             bottom: 0;
             width: 100%;
         }
+        footer a {
+            color: white;
+            text-decoration: none;
+            margin: 0 10px;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
         .validation-buttons {
             display: flex;
             justify-content: center;
@@ -80,6 +88,20 @@
         }
         .validation-buttons a:hover {
             background-color: #583d72;
+        }
+        .ai-tab {
+            background-color: #f5f5f5;
+            padding: 10px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-top: 2rem;
+        }
+        .ai-tab a {
+            color: #6a4c93;
+            text-decoration: none;
+        }
+        .ai-tab a:hover {
+            color: #4a3465;
         }
     </style>
     <script>
@@ -102,6 +124,7 @@
             <a href="#where" onclick="showSection('where')">Where</a>
             <a href="#how" onclick="showSection('how')">How</a>
             <a href="#why" onclick="showSection('why')">Why</a>
+            <a href="#ai-prompt" onclick="showSection('ai-prompt')">AI Prompt</a>
         </nav>
     </header>
     <main>
@@ -169,12 +192,26 @@
             </figure>
             <p>We believe board games can bring people together, foster creativity, and strengthen community bonds.</p>
         </section>
+        <section id="ai-prompt" class="ai-tab">
+            <h2>AI Generated Images Prompt</h2>
+            <p>This is a list of prompts used to generate images for our site:</p>
+            <ul>
+                <li>Group of people laughing and playing board games</li>
+                <li>Board game table top view</li>
+                <li>Group of people playing board games</li>
+                <li>Clock with board game pieces</li>
+                <li>Map with board game markers</li>
+                <li>Hands setting up a board game</li>
+            </ul>
+        </section>
     </main>
     <footer>
-        <p>© 2025 Board Game Bonanza</p>
+        <p>&copy; 2025 Board Game Bonanza. All rights reserved.</p>
+        <p>Website designed by <a href="https://www.yourdesignfirm.com" target="_blank">Your Design Firm</a></p>
         <div class="validation-buttons">
-            <a href="#">Validate</a>
-            <a href="#">Save</a>
+            <a href="https://validator.w3.org/" target="_blank">HTML Validator</a>
+            <a href="https://jigsaw.w3.org/css-validator/" target="_blank">CSS Validator</a>
+            <a href="https://www.w3.org/WAI/WCAG21/quickref/" target="_blank">Disability/Accessibility</a>
         </div>
     </footer>
 </body>
