--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
     </header>
     <main>
         <section id="what">
-            <h2>What is Board Game Bonanza?</h2>
-            <p>Welcome to Board Game Bonanza, your ultimate source for all things tabletop gaming! We delve into the diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
+            <h2>What is  a Board Game Bonanza?</h2>
+            <p>Welcome to Board Game Bonanza, your ultimate source for all things about  tabletop gaming! Experience a diverse world of board games, from intricate strategy titles to lighthearted party games.</p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Board%20game%20table%20top%20view?width=512&height=512&nologo=true" alt="Board Game Table Top View">
-                <figcaption>A diverse collection of board games laid out on a table.</figcaption>
+                <figcaption>A diverse collection of different board games laid out on a table. Easy to learn hard to master! </figcaption>
                 <p style="font-style: italic;">Prompt: Board game table top view</p>
             </figure>
-            <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new favorites and share their passion.</p>
-            <p>Join us as we explore the endless possibilities of board game entertainment!</p>
+            <p>Our goal is to create a vibrant community where both novice and veteran gamers can discover new board games and experince the hobby in a different way from before .</p>
+            <p>Join us and experience the  endless possibilities of board game entertainment!</p>
         </section>
         <section id="who">
             <h2>About Our Community</h2>
-            <p>Our community is built on the shared love for board games. We are a diverse group of individuals who come together to play, learn, and have fun.</p>
+            <p>Our community is built on the shared love for board games. We are a diverse and quirky  group of individuals who come together to play, learn, and design different games. In order to appeal to our consumers. </p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Group%20of%20people%20playing%20board%20games?width=512&height=512&nologo=true" alt="Group Playing Board Games">
                 <figcaption>A group of friends laughing and playing a board game.</figcaption>
@@ -163,7 +163,7 @@
         </section>
         <section id="where">
             <h2>Location and Venues</h2>
-            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay.</p>
+            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay. One of our major shops are located in London to </p>
             <figure>
                 <img src="https://image.pollinations.ai/prompt/Map%20with%20board%20game%20markers?width=512&height=512&nologo=true" alt="Map with Board Game Markers">
                 <figcaption>A map showing the location of the Community Center and other venues.</figcaption>
@@ -193,7 +193,7 @@
             <p>We believe board games can bring people together, foster creativity, and strengthen community bonds.</p>
         </section>
         <section id="ai-prompt" class="ai-tab">
-            <h2>AI Generated Images Prompt</h2>
+            <h2>AI Generated  Prompt</h2>
             <p>This is a list of prompts used to generate images for our site:</p>
             <ul>
                 <li>Group of people laughing and playing board games</li>
@@ -202,6 +202,9 @@
                 <li>Clock with board game pieces</li>
                 <li>Map with board game markers</li>
                 <li>Hands setting up a board game</li>
+                <li> Description for how board games?</li>
+                <li> Description for why board games? </li>
+                <li> Description for when board games?</li>
             </ul>
         </section>
     </main>
