--- a/index.html
+++ b/index.html
@@ -178,4 +178,5 @@
         </section>
         <section id="where">
             <h2>Location and Venues</h2>
-            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay.
+            <p>We primarily meet at the Community Center located at 123 Main Street. Our venue is spacious and equipped with tables and chairs for comfortable gameplay. One of our major shops are located in London to </p>
+            <figure>
